# geod

./: .gitignore  CMakeLists.txt  conanfile.py  readme.md
configuration/: geod.service
examples/geoc/: main.cpp
src/: main.cpp
